# binsparse-reference-cpp

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  Makefile  c_style.cpp  convert_binsparse.cpp  convert_matrixmarket.cpp  convert_ssmc.sh  inspect_binsparse.cpp  simple_io.cpp  text2hdf5.cpp
examples/data/: matrix.hdf5
include/: CMakeLists.txt
include/binsparse/: binsparse.hpp  detail.hpp  hdf5_tools.hpp  type_info.hpp
include/binsparse/c_bindings/: .gitignore  allocator_wrapper.hpp  bc_read_matrix.hpp  binsparse_matrix.h  binsparse_matrix_main.c  read_coo_matrix.hpp
include/binsparse/containers/: matrices.hpp
include/binsparse/matrix_market/: matrix_market.hpp  matrix_market_inspector.hpp  matrix_market_read.hpp
test/gtest/: CMakeLists.txt  coo_test.cpp  csr_test.cpp  util.hpp
